vector api